<resources>
    <string name="app_name">DemoDataBindingApp</string>

    <!-- Switch text   -->
    <string name="main_activity_switch_accept_text">Accept</string>
    <string name="main_activity_switch_accepted_text">Accepted</string>

    <!-- Button text -->
    <string name="button_login_text">Login</string>
    <string name="button_load_text">Load</string>
    <string name="button_close_text">Close</string>
    <string name="button_save_text">Save</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_clear_all_text">Clear All</string>
    <string name="button_register_text">Register</string>
    <string name="button_continue_text">Continue</string>
    <string name="button_users_text">Users</string>
    <string name="button_load_users_text">Load Users</string>
    <string name="button_user_operations_text">User Operations</string>
    <string name="toggle_button_text_on">Close Login Area</string>
    <string name="toggle_button_text_off">Open Login Area</string>

    <!-- EditText hint -->
    <string name="edit_text_name_hint">Input your name</string>
    <string name="edit_text_username_hint">Input username</string>
    <string name="edit_text_password_hint">Input password</string>
    <string name="edit_text_confirm_password_hint">Confirm password</string>
    <string name="edit_text_email_hint">Input your email</string>
    <string name="edit_text_count_hint">Input user count</string>

    <!-- AlertDialog -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_close">Close</string>
    <string name="alert_dialog_update">Update</string> <!-- edaakyil -->
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_alert_title">ALERT</string>
    <string name="alert_dialog_confirm_password_title">Confirm Password</string>
    <string name="alert_dialog_close_message">Save data?</string>
    <string name="alert_dialog_user_already_saved_title">User already saved</string>
    <string name="alert_dialog_user_already_saved_message">Please select option</string>
    <string name="alert_dialog_update_message">User already exist.\nDo you want to update data?</string> <!-- edaakyil -->
    <string name="alert_dialog_confirm_password_message">Passwords should be the same.Please confirm password.</string> <!-- edaakyil -->
    <string name="alert_dialog_empty_password_message">Passwords should not be missing</string> <!-- edaakyil -->
    <string name="alert_dialog_user_login_problem_title">Login problem</string>
    <string name="alert_dialog_user_login_problem_message">Can not login</string>

    <!-- TextView -->
    <string name="main_activity_text_view_login_title">Login Page</string>
    <string name="management_activity_text_view_title">Management Page</string>
    <string name="register_info_activity_text_view_title">Register Info Page</string>
    <string name="register_password_activity_text_view_title">Register Password Page</string>
    <string name="register_password_activity_text_view_username">Create password for %s</string>

    <!-- Prompt && Messages -->
    <string name="login_prompt">Logging…</string>
    <string name="close_prompt">Closing…</string>
    <string name="main_activity_click_title_prompt">Input your information to login</string>
    <string name="accepted_status_message">Accepted</string>
    <string name="not_accepted_status_message">Not accepted</string>
    <string name="continue_register_prompt">Continue register</string>
    <string name="username_missing_prompt">Username should not be empty</string>
    <string name="password_missing_prompt">Password should not be empty</string>
    <string name="username_already_saved_prompt">Username already saved.\nYou can load your information.</string>
    <string name="username_not_found_prompt">Username not found</string>
    <string name="user_successfully_saved_prompt">User successfully saved</string>
    <string name="user_successfully_loaded_prompt">User successfully loaded</string>
    <string name="user_successfully_registered_prompt">User successfully registered</string>
    <string name="user_already_registered_prompt">User already registered</string>
    <string name="data_problem_occurred_prompt">IO problem occurred</string>
    <string name="problem_occurred_prompt">Problem occurred</string>
    <string name="load_user_info_prompt">Load your existing information</string>
    <string name="save_user_info_prompt">Save your information</string>
    <string name="invalid_count_value_prompt">Invalid count value</string>
    <string name="value_must_be_positive_prompt">Value must be positive</string>

    <!--    Common  -->
    <string name="clear">Clear</string>
    <string name="anonymous">Anonymous</string>

    <!-- Marital Status -->
    <string name="marital_status_title">Marital Status</string>
    <string name="marital_status_single">Single</string>
    <string name="marital_status_married">Married</string>
    <string name="marital_status_divorced">Divorced</string>

    <!-- Last Education Degree -->
    <string name="last_education_degree_title">Last Education Degree</string>
    <string name="last_education_degree_primary">Primary</string>
    <string name="last_education_degree_secondary">Secondary</string>
    <string name="last_education_degree_bachelor">Bachelor</string>
    <string name="last_education_degree_master">Master</string>
    <string name="last_education_degree_phd">PhD</string>

    <!-- Management Activity -->
    <string name="username">Username: %s</string>
    <string name="password">Password: %s</string>

</resources>