<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.edaakyil.android.demodatabindingapp.model.UserLoginInfoModel"/>
        <variable name="userLoginInfo" type="UserLoginInfoModel"/>
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainActivityLinearLayoutMain"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ToggleButton
            android:id="@+id/mainActivityToggleButtonOpenLoginArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:minHeight="0dip"
            android:paddingVertical="16dp"
            android:textOff="@string/toggle_button_text_off"
            android:textOn="@string/toggle_button_text_on" />

        <LinearLayout
            android:id="@+id/mainActivityLinearLayoutLoginArea"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp">

            <TextView
                android:id="@+id/mainActivityTextViewLoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="casual"
                android:shadowColor="#DC7676"
                android:shadowDx="3"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/main_activity_text_view_login_title"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold|italic"
                android:onClick="onTitleTextClicked"/>

            <TextView
                android:id="@+id/mainActivityTextViewAcceptStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/not_accepted_status_message"/>

            <CheckBox
                android:id="@+id/mainActivityCheckBoxAnonymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:minHeight="0dip"
                android:padding="0dp"
                android:text="@string/anonymous"/>

            <LinearLayout
                android:id="@+id/mainActivityLinearLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mainActivityEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:hint="@string/edit_text_username_hint"
                    android:text="@={userLoginInfo.username}"
                    android:inputType="text"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="0dp"
                    android:onClick="onClearUsernameTextButtonClicked"
                    android:text="@string/clear"
                    android:textAlignment="center"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainActivityLinearLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mainActivityEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:hint="@string/edit_text_password_hint"
                    android:text="@={userLoginInfo.password}"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:minHeight="0dp"
                    android:onClick="onClearPasswordTextButtonClicked"
                    android:text="@string/clear"
                    android:textAlignment="center"
                    android:textSize="16sp" />

            </LinearLayout>

            <Switch
                android:id="@+id/mainActivitySwitchAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingVertical="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:backgroundTint="#D18787"
                android:gravity="center_vertical"
                android:checked="false"
                android:text="@string/main_activity_switch_accept_text"
                android:textSize="16sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/mainActivityButtonClearAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dip"
                android:onClick="onClearAllButtonClicked"
                android:paddingVertical="8dp"
                android:text="@string/button_clear_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:strokeColor="#4CAF50" />

            <Button
                android:id="@+id/mainActivityButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:minHeight="0dip"
                android:paddingVertical="8dp"
                android:elevation="20dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:enabled="false"
                android:text="@string/button_login_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:strokeColor="#4CAF50" />

        </LinearLayout>

        <Button
            android:id="@+id/mainActivityButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="32dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dip"
            android:onClick="onRegisterButtonClicked"
            android:paddingVertical="8dp"
            android:text="@string/button_register_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:strokeColor="#4CAF50" />

        <Button
            android:id="@+id/mainActivityButtonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="32dp"
            android:elevation="30dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dip"
            android:onClick="onCloseButtonClicked"
            android:paddingVertical="8dp"
            android:text="@string/button_close_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:strokeColor="#4CAF50" />

    </LinearLayout>

</layout>